# sentinel

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  run_dev.sh
.claude/: statusline-ext.sh
.github/workflows/: build-and-push.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deployment/: cloudflare-firewall.sh  logrotate-sentinel  nginx-sentinel.conf  sentinel.service
deployment/terraform/: .gitignore  README.md  cache.tf  dns.tf  main.tf  outputs.tf  security.tf  ssl.tf  terraform.tfvars.example  variables.tf
docs/: api-documentation.md  openapi.json
docs/integrations/: vercel-ai-gateway.md  zion-batch-endpoint.md  zion.md
docs/plans/: SENTINEL_IMPLEMENTATION_PLAN.md
scripts/: deploy-initial.sh  setup-ghcr-auth.sh  update.sh  update_prod.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/cache/: in_memory.rs  mod.rs  redis.rs  subscription.rs
src/docs/: mod.rs  openapi.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs
src/native/: error.rs  mod.rs  request.rs  response.rs  session.rs  streaming.rs  types.rs
src/native_routes/: chat.rs  docs.rs  mod.rs
src/proxy/: headers.rs  logging.rs  mod.rs  openai.rs  provider.rs  vercel_gateway.rs
src/routes/: chat.rs  completions.rs  debug.rs  embeddings.rs  health.rs  metrics.rs  (+4 more)
tests/: integration_tests.rs  mocks_test.rs
(+83 files in other folders)
