[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "High-performance AI proxy with traffic limiting based on user subscriptions"
authors = ["Sentinel Team"]
license = "MIT"
repository = "https://github.com/your-org/sentinel"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Token counting
tiktoken-rs = "0.5"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Metrics & Monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Async utilities
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# Sync primitives
once_cell = "1"

# Rate limiting & Circuit breaker
governor = "0.6"
nonzero_ext = "0.3"
failsafe = "1.2"

# Security
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
axum-test = "14"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "sentinel"
path = "src/main.rs"
